# alfred-wallet

./: README.md
apps/backend/: Cargo.toml  DEBUGGING-SUMMARY.md  INSOMNIA-README.md  INSOMNIA-TESTING-GUIDE.md  TESTING-RESULTS.md  alfred-wallet-insomnia.json  test-endpoints.sh
apps/backend/src/: main.rs
apps/backend/src/api/handlers/: health.rs  mod.rs  transaction.rs  wallet.rs
apps/backend/src/config/: env.rs  settings.rs
apps/backend/src/services/: bitcoin_rpc.rs  mod.rs  tor_service.rs  zmq_service.rs
apps/backend/src/state/: app_state.rs
apps/backend/src/wallet/: mod.rs  wallet_service.rs
apps/frontend/software/: index.html  package.json  pnpm-lock.yaml
apps/frontend/software/src/: App.tsx  index.css  main.tsx
apps/frontend/software/src/components/layout/: HomeComponent.tsx  NetworkComponent.tsx  PrivacyComponent.tsx  ProfileComponent.tsx  SettingsComponent.tsx
apps/frontend/software/src/components/ui/: langButton.tsx  swiper.tsx
apps/frontend/software/src/features/: AuthPage.tsx
apps/frontend/software/src/features/auth/login/: Login.tsx
apps/frontend/software/src/features/auth/register/: Register.tsx
apps/frontend/software/src/features/dashboard/: Dashboard.tsx
apps/frontend/software/src/i18n/: index.ts
apps/frontend/software/src/i18n/locales/en/: common.json
apps/frontend/software/src/i18n/locales/pt/: common.json
apps/frontend/software/src/routes/: index.tsx
