[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = "0.3"

thiserror = "1"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

bitcoin = { version = "0.31", features = ["rand", "serde"] }
bip39 = "2.0"
secp256k1 = { version = "0.28", features = ["rand"] }
rand = "0.8"

zmq = "0.10"

tor-stream = "0.2"
